--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
                 <div class="row">
                     <div class="col-md-3 col-left">
                         <div class="header-photo">
-                            <img class="img-circle" src="image/home-1/1.png" alt="Photo">
+                            <img class="img-circle" src="image/home-1/2b23047.jpg" alt="Photo">
                         </div>
                         <div class="wel-social">
-                            <a href="https://twitter.com/devillenews"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                            <a href="https://www.linkedin.com/in/nancy-deville-536590as"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                            <a href="https://twitter.com/devillenews" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                            <a href="https://www.linkedin.com/in/nancy-deville-536590a/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                         </div>
                     </div>
                     <div class="col-md-9 col-right wel-content">
@@ -90,7 +90,7 @@
                         <div class="header-contact-infos">
                             <div href="#" class="header-contact-info"><i class="fa fa-map-marker" aria-hidden="true"></i>Bay Area, CA</div>
                             <a href="#" class="header-contact-info"><i class="fa fa-globe" aria-hidden="true"></i>www.nancyldeville.com</a>
-                            <a href="mailto:smith.droit@gmail" class="header-contact-info"><i class="fa fa-envelope-o" aria-hidden="true"></i>info@nancyldeville.com</a>
+                            <a href="mailto:nldeville@gmail.com" class="header-contact-info"><i class="fa fa-envelope-o" aria-hidden="true"></i>nldeville@gmail.com</a>
                         </div>
                     </div>
                 </div>
@@ -109,7 +109,7 @@
                     <div class="col-md-9 col-right sec-pad">
                         <div class="about-content">
                             <p>With a over a decade of journalism experience, Nancy has done work for several media outlets including NPR, USA Today, The Tennessean and the San Francisco Chronicle. While a reporter at The Tennessean, her work earned her first place awards for Best News Reporting from the Tennessee Press Association. She's also a journalism educator who has taught workshops and university courses.</p>
-                            <p>The Bay Area native studied history at Fisk University in Nashville. Nancy received her Master of Journalism degree from the University of California, Berkeley. Nancy is currently a producer at Youth Radio. </p>
+                            <p>The Bay Area native studied history at Fisk University in Nashville. Nancy received her Master of Journalism degree from the University of California, Berkeley. Nancy is currently a producer at <a href="https://youthradio.org/" target="_blank">Youth Radio</a>.</p>
                         </div>
                     </div>
                 </div>
@@ -135,7 +135,7 @@
                                 </div>
                                 <div class="media-body">
                                     <h4 class="title">Print, Audio, &amp; Broadcast</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore</p>
+                                    <p>Efficient at producing radio or television scripts and then writing several iterations for the web and social media.  </p>
                                 </div>
                             </div>
                             <div class="col-xs-6 media expertise-media">
@@ -144,16 +144,16 @@
                                 </div>
                                 <div class="media-body">
                                     <h4 class="title">Social Media</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore</p>
+                                    <p>Proficient at creating engaging content for Facebook, Twitter, Instagram, YouTube and Snapchat that encourages readers to interact. Use social media to cultivate sources on breaking news stories.  </p>
                                 </div>
                             </div>
                             <div class="col-xs-6 media expertise-media">
                                 <div class="media-left">
-                                    <span class="ti-video-clapper"></span>
+                                   <span class="ti-video-clapper"></span>
                                 </div>
                                 <div class="media-body">
                                     <h4 class="title">Video/Audio Production</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore</p>
+                                    <p>Skilled at producing audio and video for the web using a variety of software from Adobe Audition, Premiere, Hindenburg, News Boss and Dalet. Experience in curating and producing content on the news of the day.  </p>
                                 </div>
                             </div>
                             <div class="col-xs-6 media expertise-media">
@@ -162,7 +162,7 @@
                                 </div>
                                 <div class="media-body">
                                     <h4 class="title">Project Management</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore</p>
+                                    <p>Experienced at developing editorial strategies for news outlets and non-profits. Project manager on The Tennessean’s award winning 9-month Nashville Civil Rights Movement series where I coordinated with editors and photographers, smoothed workflows and enforced production deadlines. </p>
                                 </div>
                             </div>
                             <div class="col-xs-6 media expertise-media">
@@ -171,7 +171,7 @@
                                 </div>
                                 <div class="media-body">
                                     <h4 class="title">Digital Media</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore</p>
+                                    <p>Using a high-level of news judgment, skilled at executing strategic content for daily news coverage and managing stories across digital platforms. While the weekend reporter/editor at The Tennessean, produced multimedia stories, sent breaking news alerts and wrote effective digital headlines that attracted audiences. At Youth Radio, develop strategies for effective online collaboration with major outlets to optimize readership. </p>
                                 </div>
                             </div>
                             <div class="col-xs-6 media expertise-media">
@@ -180,7 +180,7 @@
                                 </div>
                                 <div class="media-body">
                                     <h4 class="title">Journalism Education</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore</p>
+                                    <p>Spent three years as the newspaper adviser for The Meter at Tennessee State University and developed supplemental writing workshops based on students needs. Teaches journalism fundamentals at UC Berkeley, Santa Rosa Junior College, and Youth Radio and continue to mentor students in securing internships and journalism jobs after graduation. </p>
                                 </div>
                             </div>
                         </div>
@@ -198,29 +198,25 @@
                     <div class="col-md-3 col-left">
                         <div class="sec-title">
                             <h2>Education</h2>
-                            <h6>What I've studied</h6>
+                            <h6>What and Where I've studied</h6>
                         </div>
                     </div>
                     <div class="col-md-9 col-right sec-pad">
                         <div class="row row-experience">
                             <div class="col-xs-3 col-full">
-                                <h5 class="experience-date">June 2013<br/>to May 2015</h5>
                             </div>
                             <div class="col-xs-9 ex-content">
                                 <h4 class="title">Master of Journalism</h4>
-                                <h5>U.C. Berkeley Graduate School of Journalism</h5>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+								<h5>U.C. Berkeley Graduate School of Journalism</h5>
                             </div>
                         </div>
                         <div class="row row-experience">
                             <div class="col-xs-3 col-full">
-                                <h5 class="experience-date">Feb 2010<br/>to May 2012</h5>
                             </div>
                             <div class="col-xs-9 ex-content">
                                 <h4 class="title">Bachelor's Degree (History/Liberal Arts)</h4>
                                 <h5>Fisk University</h5>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-                            </div>
+                                </div>
                         </div>
                         
                     </div>
@@ -274,8 +270,8 @@
                         <div class="footer-links">
                         </div>
                         <div class="footer-social">
-                            <a href="https://twitter.com/devillenews"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                            <a href="https://www.linkedin.com/in/nancy-deville-536590as"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                            <a href="https://twitter.com/devillenews" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                            <a href="https://www.linkedin.com/in/nancy-deville-536590a" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                         </div>
                     </div>
                 </div>
