Minor Copy Changes

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                                 </div>
                                 <div class="media-body">
                                     <h4 class="title">Social Media</h4>
-                                    <p>Proficient at creating engaging content for Facebook, Twitter, Instagram, YouTube and Snapchat that encourages readers to interact. Use social media to cultivate sources on breaking news stories.  </p>
+                                    <p>Proficient at creating engaging content for Facebook, Twitter, Instagram, YouTube and Snapchat that encourages readers to interact. Uses social media to cultivate sources on breaking news stories.  </p>
                                 </div>
                             </div>
                             <div class="col-xs-6 media expertise-media">
@@ -153,7 +153,7 @@
                                 </div>
                                 <div class="media-body">
                                     <h4 class="title">Video/Audio Production</h4>
-                                    <p>Skilled at producing audio and video for the web using a variety of software from Adobe Audition, Premiere, Hindenburg, News Boss and Dalet. Experience in curating and producing content on the news of the day.  </p>
+                                    <p>Skilled at producing audio and video for the web using a variety of software from Adobe Audition, Premiere, Hindenburg, News Boss and Dalet. Experienced in curating and producing content on the news of the day.  </p>
                                 </div>
                             </div>
                             <div class="col-xs-6 media expertise-media">
@@ -162,7 +162,7 @@
                                 </div>
                                 <div class="media-body">
                                     <h4 class="title">Project Management</h4>
-                                    <p>Experienced at developing editorial strategies for news outlets and non-profits. Project manager on The Tennessean’s award winning 9-month Nashville Civil Rights Movement series where I coordinated with editors and photographers, smoothed workflows and enforced production deadlines. </p>
+                                    <p>Excels in developing editorial strategies for news outlets and non-profits. Project manager on The Tennessean’s award winning 9-month Nashville Civil Rights Movement series where I coordinated with editors and photographers, smoothed workflows and enforced production deadlines. </p>
                                 </div>
                             </div>
                             <div class="col-xs-6 media expertise-media">
@@ -171,7 +171,7 @@
                                 </div>
                                 <div class="media-body">
                                     <h4 class="title">Digital Media</h4>
-                                    <p>Using a high-level of news judgment, skilled at executing strategic content for daily news coverage and managing stories across digital platforms. While the weekend reporter/editor at The Tennessean, produced multimedia stories, sent breaking news alerts and wrote effective digital headlines that attracted audiences. At Youth Radio, develop strategies for effective online collaboration with major outlets to optimize readership. </p>
+                                    <p>Uses a high-level of news judgment to execute strategic content for daily news coverage and manage stories across digital platforms. As weekend reporter/editor at The Tennessean, I produced multimedia stories, sent breaking news alerts and wrote effective digital headlines that attracted audiences. At Youth Radio, I develop strategies for effective online collaboration with major outlets to optimize readership. </p>
                                 </div>
                             </div>
                             <div class="col-xs-6 media expertise-media">
@@ -180,7 +180,7 @@
                                 </div>
                                 <div class="media-body">
                                     <h4 class="title">Journalism Education</h4>
-                                    <p>Spent three years as the newspaper adviser for The Meter at Tennessee State University and developed supplemental writing workshops based on students needs. Teaches journalism fundamentals at UC Berkeley, Santa Rosa Junior College, and Youth Radio and continue to mentor students in securing internships and journalism jobs after graduation. </p>
+                                    <p>Spent three years as the newspaper adviser for The Meter at Tennessee State University and developed supplemental writing workshops based on students needs. Teaches journalism fundamentals at UC Berkeley, Santa Rosa Junior College, plus Youth Radio and continues to mentor students in securing internships and journalism jobs after graduation. </p>
                                 </div>
                             </div>
                         </div>
