--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <nav class="navbar navbar-default navbar-fixed-top" data-spy="affix" data-offset-top="80">
                 <div class="container-fluid">
                     <div class="navbar-header">
-                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#myNavbar">
+                        <!--Removed Header info-->
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
@@ -75,7 +75,7 @@
                 <div class="row">
                     <div class="col-md-3 col-left">
                         <div class="header-photo">
-                            <img class="img-circle" src="image/home-1/2b23047.jpg" alt="Photo">
+                            <img class="img-circle" src="image/home-1/final.jpg" alt="Photo">
                         </div>
                         <div class="wel-social">
                             <a href="https://twitter.com/devillenews" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
@@ -86,7 +86,7 @@
                         <h3 class="hello-t"></h3>
                         <h1 class="name-t">Nancy <br/><span>DeVille</span></h1>
 						<h2 class="expart-n">Writer, Producer &amp; Journalism Instructor</h2>
-                        <h3 class="expart-n"><a href="#" <span data-letters="Download Resume">Download Resume</span><i class="lnr lnr-download"></i></a></h3>
+                       <h3 class="expart-n"><a href="NancyDevilleResume.pdf" download="NancyDevilleResume.pdf"><font color="white">Download Resume</font></a><i class="lnr lnr-download"></i></a></h3>
                         <div class="header-contact-infos">
                             <div href="#" class="header-contact-info"><i class="fa fa-map-marker" aria-hidden="true"></i>Bay Area, CA</div>
                             <a href="#" class="header-contact-info"><i class="fa fa-globe" aria-hidden="true"></i>www.nancyldeville.com</a>
@@ -109,7 +109,7 @@
                     <div class="col-md-9 col-right sec-pad">
                         <div class="about-content">
                             <p>With a over a decade of journalism experience, Nancy has done work for several media outlets including NPR, USA Today, The Tennessean and the San Francisco Chronicle. While a reporter at The Tennessean, her work earned her first place awards for Best News Reporting from the Tennessee Press Association. She's also a journalism educator who has taught workshops and university courses.</p>
-                            <p>The Bay Area native studied history at Fisk University in Nashville. Nancy received her Master of Journalism degree from the University of California, Berkeley. Nancy is currently a producer at <a href="https://youthradio.org/" target="_blank">Youth Radio</a>.</p>
+                            <p>The Bay Area native studied history at Fisk University in Nashville. Nancy received her Master of Journalism degree from the University of California, Berkeley. Nancy is currently a producer at Youth Radio.</p>
                         </div>
                     </div>
                 </div>
@@ -194,7 +194,7 @@
         <!--=============Start experiences section===========-->
         <section id="education" class="experiences">
             <div class="container">
-                <div class="row display-f">
+                <div class="row display-f bg-color">
                     <div class="col-md-3 col-left">
                         <div class="sec-title">
                             <h2>Education</h2>
@@ -258,7 +258,7 @@
         <!--=============Start footer-area ===========-->
         <footer class="footer-area">
             <div class="container">
-                <div class="row display-f bg-color">
+                <div class="row display-f">
                     <div class="col-md-3 col-sm-4 col-left">
                         <div class="sec-title">
                             <h6>&copy; <script type="text/javascript">
