--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     </div>
                     <div class="col-md-9 col-right sec-pad">
                         <div class="about-content">
-                            <p>With a over a decade of journalism experience, Nancy has done work for several media outlets including NPR, USA Today, The Tennessean and the San Francisco Chronicle. While a reporter at The Tennessean, her work earned her first place awards for Best News Reporting from the Tennessee Press Association. She's also a journalism educator who has taught workshops and university courses.</p>
+                            <p>With over a decade of journalism experience, Nancy has done work for several media outlets including NPR, USA Today, The Tennessean and the San Francisco Chronicle. While a reporter at The Tennessean, her work earned her first place awards for Best News Reporting from the Tennessee Press Association. She's also a journalism educator who has taught workshops and university courses.</p>
                             <p>The Bay Area native studied history at Fisk University in Nashville. Nancy received her Master of Journalism degree from the University of California, Berkeley. Nancy is currently a producer at Youth Radio.</p>
                         </div>
                     </div>
